# agbpack

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  REUSE.toml  TODO.md
.reuse/: dep5
src/agbpack/: CMakeLists.txt  agbpack-common.cppm  agbpack-delta.cppm  agbpack-exceptions.cppm  agbpack-header.cpp  agbpack-header.cppm  agbpack-huffman.cppm  agbpack-lzss.cppm  agbpack-rle.cppm  agbpack.cppm  agbpack.exceptions.cppm  agbpack_config.hpp.in  common.cppm  cprs_huff.cpp  cprs_huff.cppm  delta.cppm  exceptions.cppm  header.cpp  header.cppm  huffman.cppm  lzss.cppm  rle.cppm  version.cppm
src/agbpack/clownlzss/: REUSE.toml
src/agbpacker/: CMakeLists.txt  agbpacker.cpp
src/agbpacker_core/: CMakeLists.txt  agbpacker_core.cppm  command_line.cpp
src/argpppp/: CMakeLists.txt  README.md  argpppp.cpp  argpppp.cppm  of.cppm  option.cpp  option.cppm  option_callback_result.cppm  parser.cpp  parser.cppm  pf.cppm
test/: CMakeLists.txt
test/agbpack_test/: CMakeLists.txt  add_test.cpp  agbpack_test_config.hpp.in  cprs_huff_test.cpp  delta_decoder_test.cpp  delta_encoder_test.cpp  huffman_decoder_test.cpp  huffman_encoder_test.cpp  lzss_decoder_debug_test.cpp  lzss_decoder_test.cpp  lzss_encoder_test.cpp  rle_decoder_test.cpp  rle_encoder_test.cpp  testdata.cpp  testdata.hpp
test/agbpack_test/testdata/: .gitattributes  REUSE.toml  delta.8.bad.eof-inside-header.txt.encoded  delta.bad.8.missing-padding-at-end-of-data.txt.encoded  delta.bad.wrong-compression-options-in-header.txt.encoded  delta.bad.wrong-compression-type-in-header.txt.encoded  delta.good.8.sine.bin.encoded  foo.txt.decoded  foo.txt.encoded  huffman.bad.4.garbage-in-unused-bits-of-leaf-node.txt.encoded  huffman.bad.8.huffman-tree-access-past-end-of-tree.txt.encoded  huffman.bad.eof-inside-tree.txt.encoded  huffman.bad.misaligned-bitstream.txt.encoded  huffman.good.4.2-bytes.txt.encoded  huffman.good.4.256-symbols.bin.encoded  huffman.good.4.3-symbols.txt.encoded  huffman.good.8.0-bytes.txt.encoded  huffman.good.8.3-symbols.txt.encoded  huffman.good.8.foo.txt.encoded  huffman.good.8.helloworld.txt.encoded  lzss.bad.eof-at-reference-byte-2.txt.encoded  lzss.good.1-literal.txt.encoded  lzss.good.17-literals.txt.encoded  lzss.good.8-literals.txt.encoded  lzss.good.compressed-bytes-2.txt.encoded  lzss.good.literals-and-references.txt.decoded  lzss.good.literals-and-references.txt.encoded  lzss.good.reference-with-minimum-match-length.txt.encoded  lzss.meh.encoded  meh.encoded  rle.bad.eof-at-compressed-byte.txt.compressed  rle.bad.wrong-compression-options-in-header.txt.encoded  rle.bad.wrong-compression-type-in-header.txt.encoded  rle.good.1-literal-byte.txt.encoded  rle.good.1-literal.txt.encoded  rle.good.131-literals.txt.encoded  rle.good.2-literals.txt.encoded  rle.good.2-repeated-bytes.txt.encoded  rle.good.3-repeated-bytes.txt.encoded  rle.good.5-literal-bytes.txt.encoded  (+6 more)
test/agbpack_test/testdata/delta/: delta.good.16.one-word.bin.encoded  delta.good.16.sine.bin.encoded
test/agbpack_test/testdata/huffman_decoder/: huffman.good.4.0-bytes.txt.encoded  huffman.good.frequency-table-test.txt.decoded
test/agbpack_test/testdata/huffman_encoder/: huffman.good.8.foo.txt.decoded
test/agbpack_test/testdata/lzss_decoder/: lzss.bad.eof-at-reference-byte-1.txt.encoded  lzss.bad.missing-padding-at-end-of-data.txt.encoded  lzss.bad.reference-at-beginning-of-file.txt.encoded  lzss.bad.reference-goes-past-decompressed-size.txt.encoded  lzss.bad.reference-outside-of-non-empty-sliding-window.txt.encoded  lzss.good.reference-with-maximum-match-length.txt.decoded  lzss.good.reference-with-minimum-offset.txt.encoded
test/agbpack_test/testdata/lzss_encoder/: lzss.good.maximum-match.txt.decoded
test/agbpack_unit_test/: CMakeLists.txt  README.md  agbpack_unit_test.cpp  agbpack_unit_test.cppm  bitstream_writer_test.cpp  byte_reader_test.cpp  choose_matches_test.cpp  find_longest_matches_test.cpp  greedy_match_finder_test.cpp  header_test.cpp  huffman_decoder_tree_test.cpp  huffman_encoder_tree_test.cpp  huffman_tree_node_test.cpp  huffman_tree_serializer_test.cpp  lzss_bitstream_writer_test.cpp  match_finder_test.cpp  maximum_match_length_table_test.cpp  node_priority_queue_test.cpp  node_queue_test.cpp  tree_node_test.cpp  utility.cpp  utility.cppm
test/agbpack_unit_testkit/: CMakeLists.txt  agbpack_unit_testkit.cpp  agbpack_unit_testkit.cppm
test/agbpacker_core_unit_test/: CMakeLists.txt  command_line_test.cpp
test/argpppp_test/: CMakeLists.txt  argp_program_version_test.cpp  of_test.cpp  option_callback_result_test.cpp  option_test.cpp  optional_string_test.cpp  parser_test.cpp  pf_test.cpp  program_name_test.cpp
test/testdata/: REUSE.toml
test/testdata/delta/: delta.bad.16.eof-inside-stream.bin.encoded  delta.bad.16.missing-padding-at-end-of-data.bin.encoded  delta.bad.8.eof-inside-stream.bin.encoded  delta.good.16.sine.bin.decoded
test/testdata/huffman_decoder/: huffman.bad.eof-while-reading-bitstream.txt.encoded  huffman.good.4.1-byte.txt.encoded  huffman.good.8.1-byte.txt.encoded  huffman.good.8.2-bytes.txt.encoded  huffman.good.8.256-bytes.bin.encoded
test/testdata/lzss_decoder/: lzss.bad.eof-at-literal.txt.encoded  lzss.bad.reference-outside-of-non-empty-sliding-window.txt.encoded  lzss.good.literals-and-references.txt.decoded  lzss.good.literals-and-references.txt.encoded  lzss.good.reference-with-maximum-match-length.txt.encoded  lzss.good.reference-with-maximum-offset.txt.decoded
test/testdata/lzss_encoder/: lzss.good.delta.cppm.decoded
test/testdata/rle/: rle.bad.eof-inside-literal-run.txt.encoded  rle.bad.literal-run-goes-past-decompressed-size.txt.encoded  rle.bad.missing-padding-at-end-of-data.txt.encoded  rle.bad.repeated-run-goes-past-decompressed-size.txt.encoded  rle.good.131-literal-bytes.txt.decoded  rle.good.131-repeated-bytes.txt.encoded  rle.good.literal-buffer-overflow-by-2-repeated-bytes.txt.encoded  rle.good.very-long-literal-run.txt.decoded
test/tools/: CMakeLists.txt  agbpack_test_tools_common.cpp  agbpack_test_tools_common.cppm  lzss-analyze.cpp  lzss-encode.cpp
(+12 files in other folders)
